Fix up some bottomsheet spacing

--- a/scss/_bottom_sheet.scss
+++ b/scss/_bottom_sheet.scss
@@ -14,11 +14,12 @@ $sheet-from-top: 20vh;
     max-width: none;
     margin: 0;
     background: none;
+  }
 
-    .modal-content {
-      border-radius: 40px 40px 0 0;
-      min-height: 100vh - $sheet-from-top;
-    }
+  .modal-content {
+    border-radius: 40px 40px 0 0;
+    min-height: 100vh - $sheet-from-top;
+    overflow: hidden;
   }
 
   &:not(.show) {
